--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h2>Christopher Kingsley</h2>
         <a href="introduction.html">Introduction</a>
         <a href="little_prince.html">The Little Prince</a>
+        <a href="calculator.html">Calculator</a>
     </div>
 
     <!--Photo implementation demonstration with styling to fit the page -->
